Fix issue with painting lines Issue with overflow in texture list Issue with dragging animations

--- a/css/panels.css
+++ b/css/panels.css
@@ -396,7 +396,7 @@
 	}
 	.texture_description_wrapper {
 		flex-grow: 1;
-
+		overflow-x: hidden;
 	}
 	.texture_name {
 		margin-top: 2px;
